Predicates, Suppliers, Functions - Centralized JsonMapper specific configuration - Switches to Jackson as Json Provider - Sets Jackson to use BigDecimal and BigInteger for numbers - Separates predicates, functions, suppliers - Introduces Decimal functions - Introduces Date functions - Introduces simple String functions - Adds date parsing support without offset/zone - Changes predicate type checks to make reusability better - Adds new predicates isNull, notNull, regex, containsKey, SpEL - Adds embedded Predicate/Function/Supplier support - Adds anyMatch, noneMatch, allMatch, evalOn predicates - Adds JsonReplaceMapRule for easy object manipulation - Adds JsonDeleteFromMapRule - Adds Calculate rule allowing numeric calculations - Adds staticJson supplier - Removes unused test only constructors
Gradle
- Adjusts gradle to use up-to-date checks better
- Adds JaCoCo coverage checks
- Raises coverage limits
- Adds additional tests
- Adds Gradle systemTest run step

CI
- Adjusts workflows to upload coverage data for branches as well
- Prepares switch from master to main branch as primary
- Changes branch name in license link to main

[minor]